# naip-cnn

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  notes.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  ipython_config.json
notebooks/: 01_generate_training_data.ipynb  01_sampling.ipynb  02_export_naip.ipynb  02_train_model.ipynb  02_training.ipynb  03_export_naip.ipynb  03_inference.ipynb  04_inference.ipynb  1_Sample_from_LIDAR_and_NAIP.ipynb  2_train_model.ipynb  3_pull_NAIP_TFrecords.ipynb  4_make_map.ipynb  aug.ipynb  ee_sampling.ipynb  update_runs.ipynb
scripts/: collect_lidar_assets.js  convert_lidar_to_multiband.py  run_predictions.py  run_validation.py  setup_env.py
src/naip_cnn/: acquisitions.py  augment.py  config.py  data.py  inference.py  model.py  models.py  sampling.py  utils.py
src/naip_cnn/cli/: __main__.py  check.py  config.py  predict.py  train.py  validate.py
src/naip_cnn/cli/utils/: convert_lidar_to_multiband.py  export_evaluation_naip.py
src/naip_cnn/scripts/: config.py  train.py
src/naip_cnn/scripts/utils/: collect_lidar_assets.py
src/naip_cnn/utils/: parsing.py  training.py  transform.py  validation.py  wandb.py
test/: conftest.py  test_utils.py
