[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "naip_cnn"
dynamic = ["version"]
description = "Modeling forest attributes from aerial imagery using CNNs"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Aaron Zuspan", email = "aaron.zuspan@oregonstate.edu" },
    { name = "Adam Sibley", email = "adam.sibley@oregonstate.edu" }
]
dependencies = [
    "tensorflow[and-cuda]==2.16.2", # Last supported version with tensorflow-io
    "tensorflow-io==0.37.1",
    "earthengine-api",
    "rasterio",
    "scikit-learn",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "h5py",
    "dask[distributed]",
    "bokeh",
    "ipython",
    "ipykernel",
    "pre-commit",
    "wandb",
    "tqdm",
    "spyndex",
    "click",
]

[tool.hatch.version]
path = "src/naip_cnn/__init__.py"

[project.scripts]
naip_cnn = "naip_cnn.cli:cli"

[tool.ruff]
select = ["E", "I", "F", "B", "FA", "UP", "ISC", "PT", "NPY", "Q", "RET", "SIM", "PERF"]
fix = true
show-fixes = true

[tool.ruff.isort]
known-first-party = ["naip_cnn"]